--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.26.1",
     "bootstrap": "5.1.3",
     "classnames": "^2.3.1",
+    "formik": "^2.2.9",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
     "rc-pagination": "^3.1.15",
@@ -19,7 +20,8 @@
     "react-scripts": "5.0.0",
     "react-yandex-maps": "^4.6.0",
     "sass": "^1.49.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
