--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "normalize.css": "^8.0.1",
     "rc-pagination": "^3.1.15",
     "react": "^17.0.2",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
