--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "5.1.3",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
+    "framer-motion": "^6.3.0",
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
     "rc-pagination": "^3.1.15",
