--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.29.0",
     "react-yandex-maps": "^4.6.0",
     "sass": "^1.49.7",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
