--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.7",
     "react-scrollable-anchor": "^0.6.1",
     "react-slick": "^0.29.0",
     "react-yandex-maps": "^4.6.0",
