--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scrollable-anchor": "^0.6.1",
     "react-slick": "^0.29.0",
     "react-yandex-maps": "^4.6.0",
+    "react-yandex-metrika": "^2.6.0",
     "sass": "^1.49.7",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
