--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.7",
     "react-scrollable-anchor": "^0.6.1",
+    "react-select": "^5.4.0",
     "react-slick": "^0.29.0",
     "react-yandex-maps": "^4.6.0",
     "react-yandex-metrika": "^2.6.0",
